--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+(x86)/
+Files/
+Repository/
+AuthFile/
+mtg-database-364703-802c3d8f67f4.json
