Updated File Structure
Updated the file structure and created the UI files. Will begin working on that in the future.

--- a/.gitignore
+++ b/.gitignore
@@ -155,4 +155,4 @@ cython_debug/
 Files/
 Repository/
 AuthFile/
-mtg-database-364703-802c3d8f67f4.json
+Version 2/mtg-database-364703-802c3d8f67f4.json
